--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,5 +1,14 @@
-{{page-title "Dummy"}}
+{{page-title "Ember Native Modal"}}
 
-<h2 id="title">Welcome to Ember</h2>
+<div class="example-app">
+  <h1 id="title">Ember Native Modal 👾</h1>
+  <p>Uses the built in
+    <a
+      href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/dialog"
+    >dialog</a>
+    in HTML.</p>
 
-{{outlet}}
+  <ModalExample />
+
+  <DialogExample />
+</div>
